--- a/blocks/hero-dark/hero-dark.css
+++ b/blocks/hero-dark/hero-dark.css
@@ -23,7 +23,7 @@
 }
 
 .hero-dark p {
-  color: rgba(255, 255, 255, 0.9);
+  color: rgb(255 255 255 / 90%);
   font-size: 1.125rem;
   max-width: 500px;
   margin: 0 0 32px;
