--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,8 @@
  */
 
 :root {
+  color-scheme: light dark;
+
   /* colors */
   --background-color: white;
   --light-color: #f8f8f8;
@@ -18,6 +20,7 @@
   --text-color: #131313;
   --link-color: #3b63fb;
   --link-hover-color: #1d3ecf;
+  --bg-color-lightgrey: light-dark(#f8f8f8, #1e1e1e);
 
   /* fonts */
   --body-font-family: roboto, roboto-fallback, sans-serif;
@@ -240,6 +243,15 @@ main > .section > div {
 
 main > .section:first-of-type {
   margin-top: 0;
+}
+
+main > .section:last-of-type {
+  margin-bottom: 0;
+}
+
+/* Remove margin from empty sections */
+main > .section:empty {
+  margin: 0;
 }
 
 @media (width >= 900px) {
