--- a/blocks/cards-hobbies/cards-hobbies.css
+++ b/blocks/cards-hobbies/cards-hobbies.css
@@ -31,8 +31,8 @@
   margin: 60px 0 0;
 }
 
-.cards-hobbies-container .default-content-wrapper p.button-container a.button:any-link,
-.cards-hobbies-container .default-content-wrapper p.button-container a.button {
+.cards-hobbies-container .default-content-wrapper p.button-container a.button,
+.cards-hobbies-container .default-content-wrapper p.button-container a.button:any-link {
   display: inline-flex !important;
   justify-content: center;
   align-items: center;
@@ -134,6 +134,10 @@
   transition: transform 0.3s ease;
 }
 
+.cards-hobbies-column > li:hover img {
+  transform: scale(1.05);
+}
+
 /* Column 1 Card 1 & Column 2 Card 2 - shorter height */
 .cards-hobbies-column:nth-child(1) > li:nth-child(1) img,
 .cards-hobbies-column:nth-child(2) > li:nth-child(2) img {
@@ -146,10 +150,6 @@
   min-height: 480px;
 }
 
-.cards-hobbies-column > li:hover img {
-  transform: scale(1.05);
-}
-
 /* Text content overlay */
 .cards-hobbies .cards-hobbies-card-body {
   position: absolute;
@@ -157,7 +157,7 @@
   left: 0;
   right: 0;
   padding: 32px;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.5) 50%, transparent 100%);
+  background: linear-gradient(to top, rgb(0 0 0 / 80%) 0%, rgb(0 0 0 / 50%) 50%, transparent 100%);
   z-index: 2;
 }
 
@@ -175,7 +175,7 @@
 .cards-hobbies .cards-hobbies-card-body p,
 .cards-hobbies .cards-hobbies-card-body {
   font-family: 'DM Sans', sans-serif;
-  color: rgba(255, 255, 255, 0.9);
+  color: rgb(255 255 255 / 90%);
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.4;
