--- a/blocks/cards-hobbies/cards-hobbies.css
+++ b/blocks/cards-hobbies/cards-hobbies.css
@@ -81,9 +81,6 @@
 /* Each column is a vertical flex container */
 .cards-hobbies-column {
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
 }
 
 /* Offset second column down */
@@ -91,8 +88,18 @@
   margin-top: 150px;
 }
 
+/* List container - remove default list styles and set up flex layout */
+.cards-hobbies-column ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
 /* Individual card */
-.cards-hobbies-column > li {
+.cards-hobbies-column li {
   list-style: none;
   position: relative;
   overflow: hidden;
@@ -102,12 +109,12 @@
   transition: opacity 0.6s ease, translate 0.6s ease, transform 0.3s ease;
 }
 
-.cards-hobbies-column > li.animate-in {
+.cards-hobbies-column li.animate-in {
   opacity: 1;
   translate: 0 0;
 }
 
-.cards-hobbies-column > li:hover {
+.cards-hobbies-column li:hover {
   transform: translateY(-6px);
 }
 
@@ -125,7 +132,7 @@
   height: 100%;
 }
 
-.cards-hobbies-column > li img {
+.cards-hobbies-column li img {
   width: 100%;
   height: 100%;
   min-height: 400px;
@@ -134,19 +141,19 @@
   transition: transform 0.3s ease;
 }
 
-.cards-hobbies-column > li:hover img {
+.cards-hobbies-column li:hover img {
   transform: scale(1.05);
 }
 
 /* Column 1 Card 1 & Column 2 Card 2 - shorter height */
-.cards-hobbies-column:nth-child(1) > li:nth-child(1) img,
-.cards-hobbies-column:nth-child(2) > li:nth-child(2) img {
+.cards-hobbies-column:nth-child(1) li:nth-child(1) img,
+.cards-hobbies-column:nth-child(2) li:nth-child(2) img {
   min-height: 380px;
 }
 
 /* Column 1 Card 2 & Column 2 Card 1 - taller height */
-.cards-hobbies-column:nth-child(1) > li:nth-child(2) img,
-.cards-hobbies-column:nth-child(2) > li:nth-child(1) img {
+.cards-hobbies-column:nth-child(1) li:nth-child(2) img,
+.cards-hobbies-column:nth-child(2) li:nth-child(1) img {
   min-height: 480px;
 }
 
@@ -201,7 +208,7 @@
     gap: 50px;
   }
 
-  .cards-hobbies-column {
+  .cards-hobbies-column ul {
     gap: 50px;
   }
 
@@ -211,14 +218,14 @@
   }
 
   /* Column 1 Card 1 & Column 2 Card 2 - shorter height */
-  .cards-hobbies-column:nth-child(1) > li:nth-child(1) img,
-  .cards-hobbies-column:nth-child(2) > li:nth-child(2) img {
+  .cards-hobbies-column:nth-child(1) li:nth-child(1) img,
+  .cards-hobbies-column:nth-child(2) li:nth-child(2) img {
     min-height: 420px;
   }
 
   /* Column 1 Card 2 & Column 2 Card 1 - taller height */
-  .cards-hobbies-column:nth-child(1) > li:nth-child(2) img,
-  .cards-hobbies-column:nth-child(2) > li:nth-child(1) img {
+  .cards-hobbies-column:nth-child(1) li:nth-child(2) img,
+  .cards-hobbies-column:nth-child(2) li:nth-child(1) img {
     min-height: 540px;
   }
 
@@ -251,7 +258,7 @@
     gap: 60px;
   }
 
-  .cards-hobbies-column {
+  .cards-hobbies-column ul {
     gap: 60px;
   }
 
@@ -260,19 +267,19 @@
     margin-top: 200px;
   }
 
-  .cards-hobbies-column > li {
+  .cards-hobbies-column li {
     border-radius: 32px;
   }
 
   /* Column 1 Card 1 & Column 2 Card 2 - shorter height */
-  .cards-hobbies-column:nth-child(1) > li:nth-child(1) img,
-  .cards-hobbies-column:nth-child(2) > li:nth-child(2) img {
+  .cards-hobbies-column:nth-child(1) li:nth-child(1) img,
+  .cards-hobbies-column:nth-child(2) li:nth-child(2) img {
     min-height: 460px;
   }
 
   /* Column 1 Card 2 & Column 2 Card 1 - taller height */
-  .cards-hobbies-column:nth-child(1) > li:nth-child(2) img,
-  .cards-hobbies-column:nth-child(2) > li:nth-child(1) img {
+  .cards-hobbies-column:nth-child(1) li:nth-child(2) img,
+  .cards-hobbies-column:nth-child(2) li:nth-child(1) img {
     min-height: 600px;
   }
 
@@ -302,7 +309,7 @@
     gap: 32px;
   }
 
-  .cards-hobbies-column {
+  .cards-hobbies-column ul {
     gap: 32px;
   }
 
@@ -327,7 +334,7 @@
     margin-bottom: 40px;
   }
 
-  .cards-hobbies-column > li {
+  .cards-hobbies-column li {
     border-radius: 20px;
   }
 
