--- a/blocks/quote-simple/quote-simple.css
+++ b/blocks/quote-simple/quote-simple.css
@@ -158,7 +158,7 @@
   .quote-simple-wrapper {
     width: 100%; /* Full width on mobile */
     max-width: calc(100% - 60px);
-    padding: 80px 30px 90px;
+    padding: 0 !important;
     border-radius: 32px;
   }
 
