--- a/styles/styles.css
+++ b/styles/styles.css
@@ -151,6 +151,7 @@ main > .section > div {
 
 main > .section:first-of-type {
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 @media (width >= 900px) {
