--- a/blocks/cards-project/cards-project.css
+++ b/blocks/cards-project/cards-project.css
@@ -22,6 +22,11 @@ main .cards-project {
   transform: translateY(30px);
 }
 
+.section.cards-project-container h2 {
+  text-align: center;
+  font-size: 2.9375rem;
+}
+
 .cards-project .project-card.animate-in {
   opacity: 1;
   transform: translateY(0);
@@ -158,7 +163,7 @@ main .cards-project {
 /* Desktop */
 @media (width >= 900px) {
   main .cards-project {
-    padding: 100px 60px;
+    padding: 80px 60px;
   }
 
   .cards-project .cards-project-container {
@@ -186,7 +191,7 @@ main .cards-project {
 /* Large desktop */
 @media (width >= 1200px) {
   main .cards-project {
-    padding: 120px 80px;
+    padding: 80px 80px;
   }
 
   .cards-project .cards-project-container {
